--- a/background/style.css
+++ b/background/style.css
@@ -4,7 +4,54 @@ body {
     background: #efefef;
     margin: 0;
     padding: 0;
-    animation: bgColor 20s ease infinite;
+}
+
+/*背景画像をフェードイン*/
+.bgFadeIn {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    margin: auto;
+    overflow: hidden;
+}
+
+.bgFadeIn .bgImg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    opacity: 0;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    animation: bgAnime 15s infinite;
+}
+
+.bgFadeIn .bgImg {
+    background-image: url("img/images (3).jpg");
+}
+
+.bgFadeIn .bgImg:nth-of-type(2) {
+    background-image: url("img/images (4).jpg");
+    animation-delay: 5s;
+}
+
+.bgFadeIn .bgImg:nth-of-type(3) {
+    background-image: url("img/images (5).jpg");
+    animation-delay: 10s;
+}
+
+.bgFadeIn .contents {
+    background: rgba(0, 0, 0, .7);
+    color: #fff;
+    padding: 2em;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: inline-block;
+    z-index: 10;
 }
 
 #main {
@@ -14,25 +61,51 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
 }
 
 /*アニメーション*/
 @keyframes bgColor {
-    0%{
+    0% {
         background: #c56fa6;
     }
+
     25% {
         background: #61a947;
     }
+
     50% {
         background: #6c7cb5;
     }
+
     75% {
         background: #c2d000;
     }
+
     100% {
         background: #c56fa6;
     }
 
+}
+
+@keyframes bgAnime {
+    0% {
+        opacity: 0;
+    }
+
+    30% {
+        opacity: 1;
+    }
+
+    35% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 0;
+    }
 }
